--- a/fun-chat/src/global.scss
+++ b/fun-chat/src/global.scss
@@ -1,7 +1,9 @@
 .body {
   position: relative;
   overflow: hidden;
+  min-width: 100%;
   width: 100%;
+  height: 100vh;
   min-height: 100vh;
   box-sizing: border-box;
   display: flex;
@@ -28,6 +30,10 @@
     text-decoration: none;
     color: inherit;
   }
+}
+
+html {
+  overflow: hidden;
 }
 
 .disabled {
