--- a/fun-chat/src/components/content/Content.scss
+++ b/fun-chat/src/components/content/Content.scss
@@ -192,7 +192,7 @@
 
 .content {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
