--- a/fun-chat/src/global.scss
+++ b/fun-chat/src/global.scss
@@ -1,9 +1,9 @@
 .body {
   position: relative;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
   min-width: 100%;
   width: 100%;
-  height: 100vh;
   min-height: 100vh;
   box-sizing: border-box;
   display: flex;
