--- a/fun-chat/src/pages/About.scss
+++ b/fun-chat/src/pages/About.scss
@@ -12,4 +12,9 @@
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: 500;
+
+  @media (max-width: 900px) {
+    gap: 30px;
+    font-size: 16px;
+  }
 }
