--- a/fun-chat/src/pages/Main.scss
+++ b/fun-chat/src/pages/Main.scss
@@ -95,7 +95,8 @@
 
   .main__main {
     width: 100%;
-    max-height: 75%;
+    height: 60vh;
+    max-height: 60vh;
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
